Bug 1912403 - Remove inline click handlers from navigator-toolbox that react to tab navigation. r=pip-reviewers,tabbrowser-reviewers,mconley,Gijs
Differential Revision: https://phabricator.services.mozilla.com/D220817

UltraBlame original commit: 2ec804953b0b26c7debe0f006914829e7359dd05

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -690,18 +690,6 @@ command
 "
 cmd_newNavigatorTab
 "
-onclick
-=
-"
-gBrowser
-.
-handleNewTabMiddleClick
-(
-this
-event
-)
-;
-"
 tooltip
 =
 "
@@ -781,18 +769,6 @@ command
 =
 "
 cmd_newNavigatorTab
-"
-onclick
-=
-"
-gBrowser
-.
-handleNewTabMiddleClick
-(
-this
-event
-)
-;
 "
 tooltip
 =
@@ -888,18 +864,6 @@ command
 =
 "
 cmd_newNavigatorTab
-"
-onclick
-=
-"
-gBrowser
-.
-handleNewTabMiddleClick
-(
-this
-event
-)
-;
 "
 tooltip
 =
@@ -1368,16 +1332,6 @@ Browser
 :
 BackOrBackDuplicate
 "
-onclick
-=
-"
-checkForMiddleClick
-(
-this
-event
-)
-;
-"
 tooltip
 =
 "
@@ -1451,16 +1405,6 @@ command
 Browser
 :
 ForwardOrForwardDuplicate
-"
-onclick
-=
-"
-checkForMiddleClick
-(
-this
-event
-)
-;
 "
 tooltip
 =
@@ -1559,16 +1503,6 @@ command
 Browser
 :
 ReloadOrDuplicate
-"
-onclick
-=
-"
-checkForMiddleClick
-(
-this
-event
-)
-;
 "
 tooltip
 =
@@ -4527,6 +4461,15 @@ hbox
 >
 <
 image
+id
+=
+"
+urlbar
+-
+go
+-
+button
+"
 class
 =
 "
@@ -4543,22 +4486,6 @@ role
 =
 "
 button
-"
-keyNav
-=
-"
-false
-"
-onclick
-=
-"
-gURLBar
-.
-handleCommand
-(
-event
-)
-;
 "
 data
 -
@@ -4788,17 +4715,6 @@ shortcut
 -
 tooltip
 "
-onclick
-=
-"
-AboutReaderParent
-.
-buttonClick
-(
-event
-)
-;
-"
 >
 <
 image
@@ -4857,16 +4773,6 @@ hidden
 =
 "
 true
-"
-onclick
-=
-"
-PictureInPicture
-.
-toggleUrlbar
-(
-event
-)
 "
 >
 <
@@ -5074,17 +4980,6 @@ hidden
 "
 true
 "
-onclick
-=
-"
-ShoppingSidebarParent
-.
-urlbarButtonClick
-(
-event
-)
-;
-"
 >
 <
 image
@@ -5122,17 +5017,6 @@ urlbar
 zoom
 -
 button
-"
-onclick
-=
-"
-FullZoom
-.
-resetFromURLBar
-(
-event
-)
-;
 "
 tooltip
 =
@@ -5242,26 +5126,6 @@ urlbar
 page
 -
 action
-"
-onclick
-=
-"
-BrowserPageActions
-.
-doCommandForAction
-(
-PageActions
-.
-actionForID
-(
-'
-bookmark
-'
-)
-event
-this
-)
-;
 "
 >
 <
@@ -6100,17 +5964,6 @@ toolbar
 empty
 -
 message
-"
-onclick
-=
-"
-BookmarkingUI
-.
-openLibraryIfLinkClicked
-(
-event
-)
-;
 "
 onkeydown
 =
@@ -7518,17 +7371,6 @@ key
 =
 "
 goHome
-"
-onclick
-=
-"
-BrowserCommands
-.
-home
-(
-event
-)
-;
 "
 cui
 -
