Bug 1917846 - Tweaks on addon-card addon-card-message moz-message-bar to use moz-support-link for SUMO pages and buttons for non-sumo links. r=willdurand,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D222365

UltraBlame original commit: 3c7734bca00df5a253842fbd6ea535dc93313324

--- a/toolkit/mozapps/extensions/content/aboutaddons.html
+++ b/toolkit/mozapps/extensions/content/aboutaddons.html
@@ -3140,16 +3140,64 @@ center
 hidden
 >
 <
+!
+-
+-
+A
 button
-action
-=
-"
+or
+a
+SUMO
+page
 link
-"
->
-<
-/
+are
+going
+to
+be
+slotted
+into
+this
+messagebar
+(
+e
+.
+g
+.
+a
 button
+is
+used
+for
+non
+-
+SUMO
+links
+like
+blocklist
+urls
+)
+.
+See
+addon
+-
+card
+custom
+element
+'
+s
+updateMessage
+method
+and
+getAddonMessageInfo
+helper
+defined
+in
+aboutaddons
+.
+js
+.
+-
+-
 >
 <
 /
