Bug 1908056 - Add media.devices.enumerate.legacy.allowlist exception for slack. r=dbaker
Differential Revision: https://phabricator.services.mozilla.com/D224367

UltraBlame original commit: 4b4307c3d73d219a394bbc454a283020df64a500

--- a/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy.html
+++ b/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy.html
@@ -352,45 +352,6 @@ present
 )
 ;
 }
-runTest
-(
-async
-(
-)
-=
->
-{
-await
-pushPrefs
-(
-[
-"
-media
-.
-navigator
-.
-streams
-.
-fake
-"
-true
-]
-[
-"
-media
-.
-devices
-.
-enumerate
-.
-legacy
-.
-enabled
-"
-true
-]
-)
-;
 /
 /
 Validate
@@ -402,6 +363,12 @@ gUM
 legacy
 )
 .
+async
+function
+testLegacyEnumerateDevices
+(
+)
+{
 let
 devices
 =
@@ -1319,6 +1286,92 @@ length
 No
 devices
 "
+)
+;
+}
+runTest
+(
+async
+(
+)
+=
+>
+{
+await
+withPrefs
+(
+[
+[
+"
+media
+.
+navigator
+.
+streams
+.
+fake
+"
+true
+]
+[
+"
+media
+.
+devices
+.
+enumerate
+.
+legacy
+.
+allowlist
+"
+"
+example
+.
+com
+*
+.
+example
+.
+com
+"
+]
+]
+testLegacyEnumerateDevices
+)
+;
+await
+withPrefs
+(
+[
+[
+"
+media
+.
+navigator
+.
+streams
+.
+fake
+"
+true
+]
+[
+"
+media
+.
+devices
+.
+enumerate
+.
+legacy
+.
+enabled
+"
+true
+]
+]
+testLegacyEnumerateDevices
 )
 ;
 }
