Backed out changeset 4b4307c3d73d (bug 1908056) for causing mda failures  test_enumerateDevices_legacy.html CLOSED TREE
UltraBlame original commit: 89eb9c53d815d3717f912691017ef957fe696c76

--- a/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy.html
+++ b/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy.html
@@ -352,6 +352,45 @@ present
 )
 ;
 }
+runTest
+(
+async
+(
+)
+=
+>
+{
+await
+pushPrefs
+(
+[
+"
+media
+.
+navigator
+.
+streams
+.
+fake
+"
+true
+]
+[
+"
+media
+.
+devices
+.
+enumerate
+.
+legacy
+.
+enabled
+"
+true
+]
+)
+;
 /
 /
 Validate
@@ -363,12 +402,6 @@ gUM
 legacy
 )
 .
-async
-function
-testLegacyEnumerateDevices
-(
-)
-{
 let
 devices
 =
@@ -1286,92 +1319,6 @@ length
 No
 devices
 "
-)
-;
-}
-runTest
-(
-async
-(
-)
-=
->
-{
-await
-withPrefs
-(
-[
-[
-"
-media
-.
-navigator
-.
-streams
-.
-fake
-"
-true
-]
-[
-"
-media
-.
-devices
-.
-enumerate
-.
-legacy
-.
-allowlist
-"
-"
-example
-.
-com
-*
-.
-example
-.
-com
-"
-]
-]
-testLegacyEnumerateDevices
-)
-;
-await
-withPrefs
-(
-[
-[
-"
-media
-.
-navigator
-.
-streams
-.
-fake
-"
-true
-]
-[
-"
-media
-.
-devices
-.
-enumerate
-.
-legacy
-.
-enabled
-"
-true
-]
-]
-testLegacyEnumerateDevices
 )
 ;
 }
