Bug 1921701 - Update `test_bug430392.html` for the new behavior changed in bug 1921705 r=m_kato
Before bug 1921705, the first `ArrowRight` key press moves caret to end of the
non-editable character "A".  Therefore, nothing is changed by pressing `Enter`
nor `Backspace`.  However, `beforeinput` events are fired due to bug 1921700.

In bug 1921705, we fix the caret move issue.  Then, this test starts editing.
Therefore, `input` events should be fired as same as `beforeinput` events.
Additionally, due to the complicated collapsible white-space handling, some
results are not same as original text content.  Therefore, we need to adjust
the expected results.

Depends on D224183

Differential Revision: https://phabricator.services.mozilla.com/D224184

UltraBlame original commit: cc74fc8bf585079c834dbac7377680c2fadb8012

--- a/editor/libeditor/tests/test_bug430392.html
+++ b/editor/libeditor/tests/test_bug430392.html
@@ -431,6 +431,24 @@ firstChild
 0
 )
 ;
+/
+/
+[
+]
+<
+span
+contenteditable
+=
+false
+>
+A
+<
+/
+span
+>
+;
+<
+span
 synthesizeKey
 (
 "
@@ -438,6 +456,24 @@ KEY_ArrowRight
 "
 )
 ;
+/
+/
+<
+span
+contenteditable
+=
+false
+>
+A
+<
+/
+span
+>
+[
+]
+;
+<
+span
 synthesizeKey
 (
 "
@@ -481,31 +517,164 @@ deleteContentBackward
 deleteContentBackward
 "
 ]
-/
-/
-Blink
-does
-nothing
-in
-this
+[
+"
+insertParagraph
+"
+"
+insertParagraph
+"
+"
+deleteContentBackward
+"
+"
+deleteContentBackward
+"
+]
+aSeparator
+=
+>
+{
+switch
+(
+aSeparator
+)
+{
 case
-but
-WebKit
-does
-insert
+"
+div
+"
+:
+case
+"
+p
+"
+:
+/
+/
+After
+insertParagraph
+the
+space
+after
+"
+A
+"
+becomes
+a
+preceding
+/
+/
+white
+space
+in
+the
 paragraph
 .
-[
+Therefore
+it
+'
+s
+removed
+when
 /
-*
-no
-input
-events
+/
+joining
+the
+block
+boundary
+by
+Backspace
+.
+/
+/
+So
+this
+is
+actual
+expected
+result
 for
-NOOP
-*
+the
+cases
+.
+return
+"
+A
+;
+B
+;
+C
+"
+;
+case
+"
+br
+"
+:
 /
-]
+/
+After
+insertLineBreak
+the
+first
+white
+-
+space
+should
+be
+replaced
+/
+/
+with
+&
+nbsp
+;
+and
+it
+should
+not
+be
+reconverted
+at
+Backspace
+.
+/
+/
+Therefore
+the
+actual
+expected
+result
+is
+"
+A
+&
+nbsp
+;
+;
+B
+;
+C
+"
+.
+return
+undefined
+;
+}
+throw
+new
+Error
+(
+"
+handle
+all
+cases
+!
+"
+)
+;
+}
 ]
 [
 "
@@ -531,6 +700,24 @@ firstChild
 0
 )
 ;
+/
+/
+[
+]
+<
+span
+contenteditable
+=
+false
+>
+A
+<
+/
+span
+>
+;
+<
+span
 synthesizeKey
 (
 "
@@ -538,6 +725,24 @@ KEY_ArrowRight
 "
 )
 ;
+/
+/
+<
+span
+contenteditable
+=
+false
+>
+A
+<
+/
+span
+>
+[
+]
+;
+<
+span
 synthesizeKey
 (
 "
@@ -591,33 +796,85 @@ deleteContentBackward
 deleteContentBackward
 "
 ]
+[
+"
+insertLineBreak
+"
+"
+insertLineBreak
+"
+"
+deleteContentBackward
+"
+"
+deleteContentBackward
+"
+]
 /
 /
-Blink
-does
-nothing
-in
-this
-case
-but
-WebKit
-inserts
+Actual
+expected
+result
+should
+be
+"
+A
+&
+nbsp
+;
+;
+B
+;
+C
+"
+because
+when
+first
+/
+/
 <
 br
 >
-element
+is
+inserted
+the
+following
+white
+-
+space
+should
+be
+preserved
+as
+/
+/
+an
+&
+nbsp
+;
 .
-[
+Then
+it
+should
+not
+be
+reconverted
+to
+a
+white
+-
+space
+after
 /
-*
-no
-input
-events
-for
-NOOP
-*
 /
-]
+Backspace
+.
+"
+;
+AB
+;
+C
+"
 ]
 ]
 ;
@@ -1112,6 +1369,7 @@ arr
 4
 ]
 (
+sep
 )
 :
 arr
@@ -1157,57 +1415,53 @@ arr
 (
 )
 ;
+const
+resultText
+=
+edit
+.
+textContent
+;
 if
 (
-typeof
 expectedFailText
 !
 =
-"
+=
 undefined
-"
 )
 {
 todo_is
 (
-edit
-.
-textContent
+resultText
 expectedText
+{
 arr
 [
 0
 ]
-+
-"
+}
 should
 not
 change
 text
 (
-"
-+
+{
 sep
-+
-"
+}
 )
-"
 )
 ;
 if
 (
-edit
-.
-textContent
+resultText
 !
 =
 =
 expectedText
 &
 &
-edit
-.
-textContent
+resultText
 !
 =
 =
@@ -1216,28 +1470,23 @@ expectedFailText
 {
 is
 (
-edit
-.
-textContent
+resultText
 expectedFailText
+{
 arr
 [
 0
 ]
-+
-"
+}
 changed
 to
 different
 failure
 (
-"
-+
+{
 sep
-+
-"
+}
 )
-"
 )
 ;
 }
@@ -1246,28 +1495,23 @@ else
 {
 is
 (
-edit
-.
-textContent
+resultText
 expectedText
+{
 arr
 [
 0
 ]
-+
-"
+}
 should
 not
 change
 text
 (
-"
-+
+{
 sep
-+
-"
+}
 )
-"
 )
 ;
 }
