Bug 1917381 - disable the ancient dom.popup_maximum pref by default, r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D224470

UltraBlame original commit: 8537b5e45cf02614b612b954a08f5bd5ab302254

--- a/dom/tests/mochitest/bugs/test_bug260264.html
+++ b/dom/tests/mochitest/bugs/test_bug260264.html
@@ -599,6 +599,86 @@ close
 (
 )
 ;
+/
+/
+dom
+.
+block_multiple_popups
+is
+true
+by
+default
+false
+in
+testing
+profile
+.
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+dom
+.
+block_multiple_popups
+"
+true
+]
+]
+}
+)
+;
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+notifyUserGestureActivation
+(
+)
+;
+send
+(
+a
+"
+click
+"
+checkOpened
+)
+;
+send
+(
+a
+"
+click
+"
+checkBlocked
+)
+;
+await
+window
+.
+open
+.
+close
+(
+)
+;
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
 await
 SpecialPowers
 .
