Bug 1892638 - [devtools] Avoid triggering any page JS when previewing RegExp and Date. r=devtools-reviewers,nchevobbe
For some reason passing an opaque wrapper from the worker thread isn't an issue for Date.getTime, while it breaks RegExp.toString.
So that, in workers, RegExp with overloaded toString method won't be properly logged and will still have an object inspector,
but with an empty label.

Differential Revision: https://phabricator.services.mozilla.com/D223763

UltraBlame original commit: 8f0b3000a74c0cc1042e69c1c76e95dd50d40da5

--- a/devtools/client/webconsole/test/browser/test-console-workers.html
+++ b/devtools/client/webconsole/test/browser/test-console-workers.html
@@ -226,6 +226,113 @@ data
 sab
 )
 ;
+/
+*
+Check
+if
+page
+functions
+can
+be
+called
+by
+console
+previewers
+*
+/
+const
+date
+=
+new
+Date
+(
+2024
+0
+1
+)
+;
+date
+.
+getTime
+=
+(
+)
+=
+>
+{
+return
+42
+;
+}
+;
+Date
+.
+prototype
+.
+getTime
+=
+date
+.
+getTime
+;
+console
+.
+log
+(
+"
+date
+-
+from
+-
+worker
+"
+date
+)
+;
+const
+regexp
+=
+/
+foo
+/
+m
+;
+regexp
+.
+toString
+=
+(
+)
+=
+>
+{
+return
+"
+24
+"
+;
+}
+;
+console
+.
+log
+(
+"
+regexp
+-
+from
+-
+worker
+"
+regexp
+/
+not
+-
+overloaded
+/
+g
+)
+;
 }
 ;
 )
