Bug 1917381 - disable the ancient dom.popup_maximum pref by default, r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D224470

UltraBlame original commit: 92bbe571d1888712bb7f2804d45037855a6f5774

--- a/testing/crashtest/final/1419902.html
+++ b/testing/crashtest/final/1419902.html
@@ -265,6 +265,30 @@ e
 }
 try
 {
+if
+(
+winsToClose
+.
+length
+<
+20
+)
+{
+/
+/
+The
+test
+used
+to
+rely
+on
+dom
+.
+popup_maximum
+=
+=
+20
+.
 winsToClose
 .
 push
@@ -298,6 +322,7 @@ html
 )
 )
 ;
+}
 }
 catch
 (
