Bug 1908056 - Split out separate test_enumerateDevices_legacy_allowlist.html test. r=dbaker
Depends on D224367

Differential Revision: https://phabricator.services.mozilla.com/D224552

UltraBlame original commit: 8148172860d2674e4de97479477777ce5bb737d9

--- a/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy_allowlist.html
+++ b/dom/media/webrtc/tests/mochitests/test_enumerateDevices_legacy_allowlist.html
@@ -69,14 +69,14 @@ title
 :
 "
 Run
-enumerateDevices
 legacy
-code
+enumerateDevices
+allowlist
 "
 bug
 :
 "
-1528042
+1908056
 "
 }
 )
@@ -115,9 +115,18 @@ enumerate
 .
 legacy
 .
-enabled
+allowlist
 "
-true
+"
+example
+.
+com
+*
+.
+example
+.
+com
+"
 ]
 ]
 testLegacyEnumerateDevices
