--- a/dom/html/test/test_bug590363.html
+++ b/dom/html/test/test_bug590363.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+590363
+-
+-
+>
+<
 head
 >
 <
@@ -326,7 +350,7 @@ file
 '
 is
 treated
-separatly
+separately
 .
 ]
 ;
