--- a/dom/crypto/test/test_WebCrypto_ECDH.html
+++ b/dom/crypto/test/test_WebCrypto_ECDH.html
@@ -1885,6 +1885,9 @@ jwk_pub
 alg
 false
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -2170,6 +2173,9 @@ jwk_pub
 alg
 false
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -2455,6 +2461,9 @@ jwk_pub
 alg
 false
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -2739,6 +2748,9 @@ jwk_pub
 alg
 true
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -4106,6 +4118,9 @@ jwk_pub
 alg
 false
 [
+"
+deriveKey
+"
 ]
 )
 .
@@ -4638,6 +4653,9 @@ key
 alg
 true
 [
+"
+deriveBits
+"
 ]
 )
 ;
@@ -4987,6 +5005,9 @@ spki
 alg
 false
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -5212,6 +5233,9 @@ raw
 alg
 true
 [
+"
+deriveBits
+"
 ]
 )
 .
@@ -6225,6 +6249,9 @@ raw
 alg
 false
 [
+"
+deriveBits
+"
 ]
 )
 .
