Bug 1922712 - Make `editing/plaintext-only` stop doing `.contentEditable = "plaintext-only"` r=m_kato
If `dom.element.contenteditable.plaintext-only.enabled` is `false`,
the API throws an exception.  Therefore, the following tests cannot check
the result.  So, we should not use it.  Instead,
`.setAttribute("contenteditable", "plaintext-only")` is fine.

Differential Revision: https://phabricator.services.mozilla.com/D224576

UltraBlame original commit: d7c82075e3effb6b62e01a92919ad3c646d5d0c3

--- a/testing/web-platform/tests/editing/plaintext-only/insertLineBreak.html
+++ b/testing/web-platform/tests/editing/plaintext-only/insertLineBreak.html
@@ -371,13 +371,17 @@ whiteSpace
 ;
 editingHost
 .
-contentEditable
-=
+setAttribute
+(
+"
+contenteditable
+"
 "
 plaintext
 -
 only
 "
+)
 ;
 document
 .
