--- a/testing/web-platform/tests/editing/plaintext-only/paste.https.html
+++ b/testing/web-platform/tests/editing/plaintext-only/paste.https.html
@@ -334,13 +334,17 @@ whiteSpace
 ;
 editingHost
 .
-contentEditable
-=
+setAttribute
+(
+"
+contenteditable
+"
 "
 plaintext
 -
 only
 "
+)
 ;
 document
 .
