--- a/testing/web-platform/tests/editing/plaintext-only/insertHTML.html
+++ b/testing/web-platform/tests/editing/plaintext-only/insertHTML.html
@@ -278,13 +278,17 @@ whiteSpace
 ;
 editingHost
 .
-contentEditable
-=
+setAttribute
+(
+"
+contenteditable
+"
 "
 plaintext
 -
 only
 "
+)
 ;
 document
 .
