--- a/testing/web-platform/tests/editing/plaintext-only/insertParagraph.html
+++ b/testing/web-platform/tests/editing/plaintext-only/insertParagraph.html
@@ -259,13 +259,17 @@ whiteSpace
 ;
 editingHost
 .
-contentEditable
-=
+setAttribute
+(
+"
+contenteditable
+"
 "
 plaintext
 -
 only
 "
+)
 ;
 document
 .
