--- a/testing/web-platform/tests/resource-timing/status-codes-create-entry.html
+++ b/testing/web-platform/tests/resource-timing/status-codes-create-entry.html
@@ -322,9 +322,9 @@ script
 )
 ;
 let
-noSrcScriptFound
+ignoredScripts
 =
-false
+0
 ;
 for
 (
@@ -336,10 +336,83 @@ scripts
 {
 if
 (
+!
 script
 .
 src
+|
+|
+script
+.
+src
+.
+match
+(
+/
+testharness
+(
+report
 )
+?
+\
+.
+js
+/
+)
+)
+{
+/
+/
+Ignore
+this
+script
+which
+has
+no
+src
+value
+and
+the
+testharness
+*
+.
+js
+/
+/
+scripts
+.
+testharness
+*
+.
+js
+may
+be
+cached
+from
+a
+previous
+test
+and
+/
+/
+served
+quickly
+enough
+for
+a
+coarsened
+duration
+to
+be
+zero
+exactly
+.
+ignoredScripts
++
++
+;
+}
+else
 {
 const
 entries
@@ -379,38 +452,13 @@ src
 )
 ;
 }
-else
-{
-/
-/
-Ignore
-this
-script
-which
-has
-no
-src
-value
-.
-There
-should
-only
-be
-one
-such
-script
-.
-assert_false
+}
+assert_equals
 (
-noSrcScriptFound
+ignoredScripts
+3
 )
 ;
-noSrcScriptFound
-=
-true
-;
-}
-}
 }
 )
 )
