Bug 1921643 [wpt PR 48372] - Expand tests with deprecated values `reset` and `invalid` to validate, a=testonly
Automatic update from web-platform-tests
Expand tests with deprecated values `reset` and `invalid` to validate (#48372)

--

wpt-commits: 03c258eab4bb0dc037d0b3822049cada69a49427
wpt-pr: 48372

UltraBlame original commit: 3085fc4c990cffde3f1b58b74f3702736762adf1

--- a/testing/web-platform/tests/css/css-viewport/zoom/parsing/zoom-valid.html
+++ b/testing/web-platform/tests/css/css-viewport/zoom/parsing/zoom-valid.html
@@ -283,6 +283,26 @@ test_invalid_value
 zoom
 "
 "
+reset
+"
+)
+;
+test_invalid_value
+(
+"
+zoom
+"
+"
+document
+"
+)
+;
+test_invalid_value
+(
+"
+zoom
+"
+"
 -
 100
 %
