Bug 1920583 [wpt PR 48317] - Cover changing content targetting :has-slotted and :has-slotted(...), a=testonly
Automatic update from web-platform-tests
Cover changing content targetting :has-slotted and :has-slotted(...) (#48317)

* Cover changing content targetting :has-slotted and :has-slotted(...)

* Diversify DOM interactions

* Lint

* Make test file "tentative"

* Include missing `.shadowRoot`s

* Split out functional :has-slotted() from non-functional :has-slotted

* Correc titles and :has-slotted(div + div) test
--

wpt-commits: d3ec11188b1b6720a4c8379bde7ae924608c9f04
wpt-pr: 48317

UltraBlame original commit: 0b99fdf744401438bf87a693bb8a4d63fcbcfd09

--- a/testing/web-platform/tests/css/css-scoping/has-slotted-003.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-003.tentative.html
@@ -20,19 +20,6 @@ title
 has
 -
 slotted
-(
-.
-.
-.
-)
-negative
-test
-:
-no
-children
-but
-whitespace
-present
 <
 /
 title
@@ -150,22 +137,19 @@ background
 -
 color
 :
-green
+red
 ;
 }
 :
 has
 -
 slotted
-(
-*
-)
 {
 background
 -
 color
 :
-red
+green
 ;
 }
 <
@@ -182,6 +166,13 @@ slot
 <
 /
 template
+>
+<
+div
+>
+<
+/
+div
 >
 <
 /
