--- a/testing/web-platform/tests/css/css-scoping/has-slotted-functional-007.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-functional-007.tentative.html
@@ -20,6 +20,11 @@ title
 has
 -
 slotted
+(
+el
++
+el
+)
 <
 /
 title
@@ -119,7 +124,9 @@ open
 <
 style
 >
-slot
+[
+name
+]
 {
 display
 :
@@ -144,6 +151,11 @@ red
 has
 -
 slotted
+(
+div
++
+div
+)
 {
 background
 -
@@ -164,8 +176,39 @@ slot
 slot
 >
 <
+slot
+name
+=
+"
+after
+"
+>
+<
+/
+slot
+>
+<
 /
 template
+>
+<
+div
+>
+<
+/
+div
+>
+<
+div
+slot
+=
+"
+after
+"
+>
+<
+/
+div
 >
 <
 /
