--- a/testing/web-platform/tests/css/css-scoping/has-slotted-functional-flattened-002.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-functional-flattened-002.tentative.html
@@ -20,10 +20,19 @@ title
 has
 -
 slotted
-flattened
-through
-multiple
-slots
+(
+.
+.
+.
+)
+negative
+test
+:
+no
+children
+or
+white
+space
 <
 /
 title
@@ -157,19 +166,22 @@ background
 -
 color
 :
-red
+green
 ;
 }
 :
 has
 -
 slotted
+(
+*
+)
 {
 background
 -
 color
 :
-green
+red
 ;
 }
 <
@@ -201,13 +213,6 @@ div
 <
 /
 template
->
-<
-div
->
-<
-/
-div
 >
 <
 /
