--- a/testing/web-platform/tests/css/css-scoping/has-slotted-functional-flattened-003.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-functional-flattened-003.tentative.html
@@ -20,10 +20,23 @@ title
 has
 -
 slotted
+(
+.
+.
+.
+)
 flattened
 through
 multiple
 slots
+negative
+test
+:
+no
+children
+but
+whitespace
+present
 <
 /
 title
@@ -157,19 +170,22 @@ background
 -
 color
 :
-red
+green
 ;
 }
 :
 has
 -
 slotted
+(
+*
+)
 {
 background
 -
 color
 :
-green
+red
 ;
 }
 <
@@ -188,26 +204,19 @@ slot
 template
 >
 <
-slot
->
-<
-/
-slot
->
-<
 /
 div
+>
+<
+slot
+>
+<
+/
+slot
 >
 <
 /
 template
->
-<
-div
->
-<
-/
-div
 >
 <
 /
