--- a/testing/web-platform/tests/css/css-scoping/has-slotted-functional-002.tentative.html
+++ b/testing/web-platform/tests/css/css-scoping/has-slotted-functional-002.tentative.html
@@ -20,10 +20,19 @@ title
 has
 -
 slotted
-flattened
-through
-multiple
-slots
+(
+.
+.
+.
+)
+negative
+test
+:
+no
+children
+or
+white
+space
 <
 /
 title
@@ -109,22 +118,6 @@ div
 id
 =
 "
-ancestor
-"
->
-<
-template
-shadowrootmode
-=
-"
-open
-"
->
-<
-div
-id
-=
-"
 host
 "
 >
@@ -157,19 +150,22 @@ background
 -
 color
 :
-red
+green
 ;
 }
 :
 has
 -
 slotted
+(
+*
+)
 {
 background
 -
 color
 :
-green
+red
 ;
 }
 <
@@ -182,21 +178,6 @@ slot
 <
 /
 slot
->
-<
-/
-template
->
-<
-slot
->
-<
-/
-slot
->
-<
-/
-div
 >
 <
 /
