Bug 1921781 [wpt PR 48378] - [line-clamp] [text-box-trim] Make `text-box-trim` work with `line-clamp: auto`, a=testonly
Automatic update from web-platform-tests
[line-clamp] [text-box-trim] Make `text-box-trim` work with `line-clamp: auto`

When `text-box-trim: trim-end` is applied to an element with
`line-clamp`, it should trim the last line before clamp. This was
previously implemented when clamping by a determined number of lines,
but not when clamping by a height.

Since the trimming affects the height of the content, this should be
taken into account when clamping. Therefore, in the initial layout
pass that determines the number of lines that fit in that height, if
`text-box-trim: trim-end` is set, then every line is trimmed as if it
were the last line before clamp. However, since this might not be the
actual last line before clamp, after laying out the line we make sure
to increase the inflow position's logical block offset so that any
further lines and boxes after it are set at the correct position.

Bug: 40336192, 40254880
Change-Id: I7cb19ca7ebadcf60dec587b3f6cbbf7363f7e64f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5893918
Commit-Queue: Andreu Botella <abotellaigalia.com>
Reviewed-by: Koji Ishii <kojiichromium.org>
Cr-Commit-Position: refs/heads/main{#1361770}

--

wpt-commits: 4800822f8b50ddaa73efe617657dabbeb19581e1
wpt-pr: 48378

UltraBlame original commit: c0a659f0669a840953c81e4e19d8afb3aec2285b

--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-line-clamp-auto-001.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-line-clamp-auto-001.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+meta
+charset
+=
+"
+UTF
+-
+8
+"
+>
+<
 title
 >
 text
@@ -17,9 +27,12 @@ the
 last
 line
 before
-line
--
 clamp
+when
+clamping
+by
+a
+height
 <
 /
 title
@@ -51,11 +64,13 @@ inline
 3
 /
 #
+propdef
+-
 text
 -
 box
 -
-trim
+edge
 "
 >
 <
@@ -85,45 +100,13 @@ inline
 3
 /
 #
+propdef
+-
 text
 -
 box
 -
-edge
-"
->
-<
-link
-ref
-=
-"
-help
-"
-href
-=
-"
-https
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-TR
-/
-css
--
-overflow
--
-4
-/
-#
-line
--
-clamp
+trim
 "
 >
 <
@@ -145,6 +128,8 @@ trim
 line
 -
 clamp
+-
+auto
 -
 001
 -
@@ -224,60 +209,18 @@ edge
 :
 text
 ;
-}
-.
-clamp
-{
 line
 -
 clamp
 :
-3
+auto
 ;
-}
-supports
-not
-(
-line
+max
 -
-clamp
+height
 :
-3
-)
-{
-.
-clamp
-{
--
-webkit
--
-line
--
-clamp
-:
-3
+285px
 ;
-display
-:
--
-webkit
--
-box
-;
--
-webkit
--
-box
--
-orient
-:
-vertical
-;
-overflow
-:
-hidden
-;
-}
 }
 <
 /
@@ -301,7 +244,6 @@ class
 =
 "
 target
-clamp
 "
 >
 A
