--- a/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-line-clamp-auto-002.html
+++ b/testing/web-platform/tests/css/css-inline/text-box-trim/text-box-trim-line-clamp-auto-002.html
@@ -4,6 +4,16 @@ DOCTYPE
 html
 >
 <
+meta
+charset
+=
+"
+UTF
+-
+8
+"
+>
+<
 title
 >
 text
@@ -17,9 +27,12 @@ the
 last
 line
 before
-line
--
 clamp
+when
+clamping
+by
+a
+height
 <
 /
 title
@@ -51,11 +64,13 @@ inline
 3
 /
 #
+propdef
+-
 text
 -
 box
 -
-trim
+edge
 "
 >
 <
@@ -85,45 +100,13 @@ inline
 3
 /
 #
+propdef
+-
 text
 -
 box
 -
-edge
-"
->
-<
-link
-ref
-=
-"
-help
-"
-href
-=
-"
-https
-:
-/
-/
-www
-.
-w3
-.
-org
-/
-TR
-/
-css
--
-overflow
--
-4
-/
-#
-line
--
-clamp
+trim
 "
 >
 <
@@ -146,7 +129,9 @@ line
 -
 clamp
 -
-001
+auto
+-
+002
 -
 ref
 .
@@ -224,60 +209,80 @@ edge
 :
 text
 ;
-}
-.
-clamp
-{
+/
+*
+385px
+will
+fit
+4
+lines
+if
+the
+last
 line
--
-clamp
-:
-3
-;
-}
-supports
-not
+has
+its
+end
+trimmed
+*
 (
-line
+4
+*
+100
 -
-clamp
-:
-3
+25
+=
+375px
 )
-{
+but
+it
+will
+fit
+5
+lines
+if
+all
+have
+their
+end
+trimmed
+*
+(
+5
+*
+(
+100
+-
+25
+)
+=
+375px
+)
 .
-clamp
-{
--
-webkit
--
+This
+tests
+that
+only
+the
+last
+line
+gets
+trimmed
+.
+*
+/
 line
 -
 clamp
 :
-3
+auto
 ;
-display
+max
+-
+height
 :
--
-webkit
--
-box
+385px
 ;
--
-webkit
--
-box
--
-orient
-:
-vertical
-;
-overflow
-:
-hidden
-;
-}
 }
 <
 /
@@ -301,7 +306,6 @@ class
 =
 "
 target
-clamp
 "
 >
 A
@@ -317,6 +321,14 @@ C
 br
 >
 D
+<
+br
+>
+E
+<
+br
+>
+F
 <
 /
 div
