--- a/testing/web-platform/tests/html/semantics/embedded-content/the-embed-element/embed-represent-nothing-04.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/the-embed-element/embed-represent-nothing-04.html
@@ -23,11 +23,99 @@ The
 embed
 element
 represents
-a
-document
+nothing
+when
+it
+is
+never
+being
+rendered
 <
 /
 title
+>
+<
+link
+rel
+=
+"
+author
+"
+title
+=
+"
+Peng
+Zhou
+"
+href
+=
+"
+mailto
+:
+zhoupeng
+.
+1996
+bytedance
+.
+com
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+multipage
+/
+#
+the
+-
+embed
+-
+element
+"
+>
+<
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
+Check
+if
+the
+embed
+element
+represents
+nothing
+when
+it
+is
+never
+being
+rendered
+"
 >
 <
 script
@@ -64,42 +152,14 @@ js
 script
 >
 <
-meta
-name
-=
-"
-assert
-"
-content
-=
-"
-Ensure
-document
-finishes
-load
-when
-focus
-is
-attempted
-before
-the
-embed
-is
-finished
-loading
-"
->
-<
 style
 >
-.
-hidden
+#
+target
 {
-content
--
-visibility
+display
 :
-hidden
+none
 ;
 }
 <
@@ -118,6 +178,12 @@ t
 =
 >
 {
+window
+.
+childLoaded
+=
+false
+;
 addEventListener
 (
 '
@@ -134,6 +200,20 @@ step_func_done
 {
 assert_true
 (
+!
+!
+document
+.
+querySelector
+(
+'
+embed
+'
+)
+)
+;
+assert_false
+(
 window
 .
 childLoaded
@@ -144,11 +224,13 @@ childLoaded
 )
 ;
 }
-"
+'
 ensure
-onload
-happens
-"
+the
+element
+represents
+nothing
+'
 )
 ;
 <
@@ -156,16 +238,12 @@ happens
 script
 >
 <
-div
-class
-=
-hidden
->
-<
 embed
 id
 =
+"
 target
+"
 src
 =
 "
@@ -178,44 +256,7 @@ html
 >
 <
 /
-div
->
-<
-script
->
-/
-/
-Ensure
-we
-process
-style
-in
-the
-hidden
-object
-which
-normally
-delays
-/
-/
-load
-until
-the
 embed
-object
-is
-finished
-loading
-.
-target
-.
-focus
-(
-)
-;
-<
-/
-script
 >
 <
 /
