Bug 1921839 [wpt PR 48385] - createImageBitmap: Respect colorSpaceConversion for video, a=testonly
Automatic update from web-platform-tests
createImageBitmap: Respect colorSpaceConversion for video

Plumb the parameter to reinterpret the video as being in sRGB from
- blink::ImageBitmap::ImageBitmap (read from options)
- blink::HTMLVideoElement::CreateStaticBitmapImage
- blink::CreateImageFromVideoFrame
- media::PaintCanvasVideoRenderer::Paint (via new parameter)

Add a WPT test for this. For the WPT test, add a Display P3 mp4 and
webm test video. (There exists a Rec2020 test video, but it is 10-bit,
which has bugs on some platforms, and uses the Rec709 transfer function,
which has different interpretations on all browsers).

Bug: 362431889
Change-Id: I3c12eb720b927a8e6466ab35ae29a044342df123
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5878044
Reviewed-by: Dale Curtis <dalecurtischromium.org>
Reviewed-by: Fernando Serboncini <fserbchromium.org>
Commit-Queue: ccameron chromium <ccameronchromium.org>
Cr-Commit-Position: refs/heads/main{#1361907}

--

wpt-commits: 8f6b76e576f65d9acce60efeed3af35ef4e438a0
wpt-pr: 48385

UltraBlame original commit: a97efe13563b21d79d4774f693245deb2e943d0e

--- a/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/createImageBitmap-colorSpaceConversion.html
+++ b/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/createImageBitmap-colorSpaceConversion.html
@@ -144,6 +144,7 @@ testCanvasDisplayingPattern
 canvas
 width
 height
+expected
 )
 {
 var
@@ -166,10 +167,7 @@ check
 (
 x
 y
-r
-g
-b
-a
+rgba
 )
 =
 >
@@ -178,10 +176,22 @@ _assertPixelApprox
 canvas
 x
 y
-r
-g
-b
-a
+rgba
+[
+0
+]
+rgba
+[
+1
+]
+rgba
+[
+2
+]
+rgba
+[
+3
+]
 tolerance
 )
 ;
@@ -197,10 +207,10 @@ width
 height
 /
 4
-124
+expected
+[
 0
-27
-255
+]
 )
 ;
 check
@@ -215,10 +225,10 @@ width
 height
 /
 4
-0
-124
-46
-255
+expected
+[
+1
+]
 )
 ;
 check
@@ -233,10 +243,10 @@ width
 height
 /
 4
-60
-0
-123
-255
+expected
+[
+2
+]
 )
 ;
 check
@@ -251,10 +261,10 @@ width
 height
 /
 4
-0
-0
-0
-255
+expected
+[
+3
+]
 )
 ;
 }
@@ -263,6 +273,7 @@ testDrawImageBitmap
 (
 source
 options
+expected
 )
 {
 var
@@ -328,12 +339,73 @@ testCanvasDisplayingPattern
 canvas
 20
 20
+expected
 )
 ;
 }
 )
 ;
 }
+const
+wide_gamut_pattern_expected
+=
+[
+[
+124
+0
+27
+255
+]
+[
+0
+124
+46
+255
+]
+[
+60
+0
+123
+255
+]
+[
+0
+0
+0
+255
+]
+]
+;
+const
+video_bb0000_expected
+=
+[
+[
+187
+0
+0
+255
+]
+[
+187
+0
+0
+255
+]
+[
+187
+0
+0
+255
+]
+[
+187
+0
+0
+255
+]
+]
+;
 var
 wideGamutImageSourceTypes
 =
@@ -363,6 +435,9 @@ pattern
 png
 "
 )
+expected
+:
+wide_gamut_pattern_expected
 }
 {
 name
@@ -388,6 +463,49 @@ pattern
 png
 "
 )
+expected
+:
+wide_gamut_pattern_expected
+}
+{
+name
+:
+'
+a
+Video
+'
+factory
+:
+makeMakeVideo
+(
+"
+/
+html
+/
+canvas
+/
+element
+/
+manual
+/
+wide
+-
+gamut
+-
+canvas
+/
+resources
+/
+Display
+-
+P3
+-
+BB0000
+"
+)
+expected
+:
+video_bb0000_expected
 }
 ]
 ;
@@ -397,6 +515,7 @@ let
 {
 name
 factory
+expected
 }
 of
 wideGamutImageSourceTypes
@@ -431,6 +550,7 @@ colorSpaceConversion
 none
 "
 }
+expected
 )
 ;
 }
