Bug 1921927 [wpt PR 48398] - Update SW static routing API resource timing with worker prefix, a=testonly
Automatic update from web-platform-tests
Update SW static routing API resource timing with worker prefix

This CL updates ServiceWorker static routing API resource timing
information to add the `worker` prefix to the fields.

Explainer: https://github.com/WICG/service-worker-static-routing-api/blob/main/resource-timing-api.md
Bug: 41496865
Change-Id: I6f96b5aca0fdd389a04eb32bb77c39f010078109
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5898207
Reviewed-by: Shunya Shishido <sisidovskichromium.org>
Reviewed-by: Takashi Toyoshima <toyoshimchromium.org>
Reviewed-by: Yoshisato Yanagisawa <yyanagisawachromium.org>
Commit-Queue: Keita Suzuki <suzukikeitachromium.org>
Cr-Commit-Position: refs/heads/main{#1362186}

--

wpt-commits: bf3c9f751607cc290c292f7b40ac32662d847935
wpt-pr: 48398

UltraBlame original commit: 2e543775fc8272298263583926aa8e72caa356a9

--- a/testing/web-platform/tests/service-workers/service-worker/tentative/static-router/static-router-resource-timing.https.html
+++ b/testing/web-platform/tests/service-workers/service-worker/tentative/static-router/static-router-resource-timing.https.html
@@ -540,7 +540,7 @@ assert_equals
 (
 entry
 .
-matchedSourceType
+workerMatchedSourceType
 options
 .
 matched_source_type
@@ -551,7 +551,7 @@ assert_equals
 (
 entry
 .
-finalSourceType
+workerFinalSourceType
 options
 .
 final_source_type
@@ -639,7 +639,7 @@ if
 (
 entry
 .
-finalSourceType
+workerFinalSourceType
 =
 =
 =
@@ -709,7 +709,7 @@ if
 (
 entry
 .
-finalSourceType
+workerFinalSourceType
 =
 =
 =
