--- a/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/createImageBitmap-exif-orientation.html
+++ b/testing/web-platform/tests/html/canvas/element/manual/imagebitmap/createImageBitmap-exif-orientation.html
@@ -139,6 +139,8 @@ checkColors
 ctx
 w
 h
+tileW
+tileH
 expectedColors
 )
 {
@@ -177,18 +179,22 @@ x
 =
 col
 *
-80
+tileW
 +
-40
+tileW
+/
+2
 ;
 let
 y
 =
 row
 *
-80
+tileH
 +
-40
+tileH
+/
+2
 ;
 let
 i
@@ -375,6 +381,8 @@ width
 canvas
 .
 height
+80
+80
 [
 /
 /
@@ -583,6 +591,8 @@ width
 canvas
 .
 height
+80
+80
 [
 /
 /
@@ -784,6 +794,8 @@ width
 canvas
 .
 height
+80
+80
 [
 /
 /
@@ -961,6 +973,8 @@ width
 canvas
 .
 height
+80
+80
 [
 /
 /
@@ -1019,6 +1033,587 @@ imageOrientation
 flipY
 and
 cropping
+"
+)
+;
+async_test
+(
+function
+(
+t
+)
+{
+const
+canvas
+=
+document
+.
+createElement
+(
+"
+canvas
+"
+)
+;
+canvas
+.
+width
+=
+160
+;
+canvas
+.
+height
+=
+80
+;
+document
+.
+body
+.
+append
+(
+canvas
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+"
+2d
+"
+)
+;
+loadImage
+(
+"
+resources
+/
+squares_6
+.
+jpg
+"
+)
+.
+then
+(
+(
+image
+)
+=
+>
+createImageBitmap
+(
+image
+{
+resizeWidth
+:
+160
+resizeHeight
+:
+80
+}
+)
+)
+.
+then
+(
+t
+.
+step_func_done
+(
+function
+(
+imageBitmap
+)
+{
+ctx
+.
+drawImage
+(
+imageBitmap
+0
+0
+)
+;
+checkColors
+(
+ctx
+canvas
+.
+width
+canvas
+.
+height
+40
+40
+[
+/
+/
+row
+col
+r
+g
+b
+a
+[
+0
+0
+255
+0
+0
+255
+]
+[
+0
+1
+0
+255
+0
+255
+]
+[
+0
+2
+0
+0
+255
+255
+]
+[
+0
+3
+0
+0
+0
+255
+]
+[
+1
+0
+255
+128
+128
+255
+]
+[
+1
+1
+128
+255
+128
+255
+]
+[
+1
+2
+128
+128
+255
+255
+]
+[
+1
+3
+128
+128
+128
+255
+]
+]
+)
+;
+}
+)
+)
+;
+}
+"
+createImageBitmap
+with
+EXIF
+rotation
+imageOrientation
+from
+-
+image
+no
+cropping
+and
+resize
+"
+)
+;
+async_test
+(
+function
+(
+t
+)
+{
+const
+canvas
+=
+document
+.
+createElement
+(
+"
+canvas
+"
+)
+;
+canvas
+.
+width
+=
+80
+;
+canvas
+.
+height
+=
+80
+;
+document
+.
+body
+.
+append
+(
+canvas
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+"
+2d
+"
+)
+;
+loadImage
+(
+"
+resources
+/
+squares_6
+.
+jpg
+"
+)
+.
+then
+(
+image
+=
+>
+createImageBitmap
+(
+image
+80
+0
+160
+160
+{
+imageOrientation
+:
+"
+flipY
+"
+resizeWidth
+:
+80
+resizeHeight
+:
+80
+}
+)
+)
+.
+then
+(
+t
+.
+step_func_done
+(
+function
+(
+imageBitmap
+)
+{
+ctx
+.
+drawImage
+(
+imageBitmap
+0
+0
+)
+;
+checkColors
+(
+ctx
+canvas
+.
+width
+canvas
+.
+height
+40
+40
+[
+/
+/
+row
+col
+r
+g
+b
+a
+[
+0
+0
+128
+255
+128
+255
+]
+[
+0
+1
+128
+128
+255
+255
+]
+[
+1
+0
+0
+255
+0
+255
+]
+[
+1
+1
+0
+0
+255
+255
+]
+]
+)
+;
+}
+)
+)
+;
+}
+"
+createImageBitmap
+with
+EXIF
+rotation
+imageOrientation
+flipY
+cropping
+and
+resize
+"
+)
+;
+async_test
+(
+function
+(
+t
+)
+{
+const
+canvas
+=
+document
+.
+createElement
+(
+"
+canvas
+"
+)
+;
+canvas
+.
+width
+=
+80
+;
+canvas
+.
+height
+=
+40
+;
+document
+.
+body
+.
+append
+(
+canvas
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+"
+2d
+"
+)
+;
+loadImage
+(
+"
+resources
+/
+squares_6
+.
+jpg
+"
+)
+.
+then
+(
+image
+=
+>
+createImageBitmap
+(
+image
+80
+0
+160
+160
+{
+imageOrientation
+:
+"
+flipY
+"
+resizeWidth
+:
+80
+resizeHeight
+:
+40
+}
+)
+)
+.
+then
+(
+t
+.
+step_func_done
+(
+function
+(
+imageBitmap
+)
+{
+ctx
+.
+drawImage
+(
+imageBitmap
+0
+0
+)
+;
+checkColors
+(
+ctx
+canvas
+.
+width
+canvas
+.
+height
+40
+20
+[
+/
+/
+row
+col
+r
+g
+b
+a
+[
+0
+0
+128
+255
+128
+255
+]
+[
+0
+1
+128
+128
+255
+255
+]
+[
+1
+0
+0
+255
+0
+255
+]
+[
+1
+1
+0
+0
+255
+255
+]
+]
+)
+;
+}
+)
+)
+;
+}
+"
+createImageBitmap
+with
+EXIF
+rotation
+imageOrientation
+flipY
+cropping
+and
+nonuniform
+resize
 "
 )
 ;
