Bug 1922068 [wpt PR 48411] - Add ::search-text getComputedStyle subtests, a=testonly
Automatic update from web-platform-tests
Add ::search-text getComputedStyle subtests

Add various ::search-text getComputedStyle subtests to match similar
tests for other highlight pseudos.

Change-Id: I5c8fbc6742167e5832d69208dddd9746f75365ed
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5899323
Reviewed-by: Stephen Chenney <schenneychromium.org>
Commit-Queue: Rob Buis <rbuisigalia.com>
Cr-Commit-Position: refs/heads/main{#1362666}

--

wpt-commits: 260920bdb87f94d789021a72d6544494eb0fb84c
wpt-pr: 48411

UltraBlame original commit: 8982957e0c9219ca502a0df386be1ef5ddf435f0

--- a/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed-inheritance.html
+++ b/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed-inheritance.html
@@ -230,6 +230,46 @@ currentcolor
 target
 :
 :
+search
+-
+text
+{
+color
+:
+currentcolor
+;
+background
+-
+color
+:
+currentcolor
+;
+}
+#
+target
+:
+:
+search
+-
+text
+:
+current
+{
+color
+:
+red
+;
+background
+-
+color
+:
+red
+;
+}
+#
+target
+:
+:
 spelling
 -
 error
@@ -330,6 +370,13 @@ selection
 :
 :
 target
+-
+text
+"
+"
+:
+:
+search
 -
 text
 "
