--- a/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed-visited.html
+++ b/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed-visited.html
@@ -211,6 +211,36 @@ a
 visited
 :
 :
+search
+-
+text
+{
+color
+:
+currentcolor
+;
+}
+a
+:
+visited
+:
+:
+search
+-
+text
+:
+current
+{
+color
+:
+red
+;
+}
+a
+:
+visited
+:
+:
 spelling
 -
 error
@@ -314,6 +344,13 @@ selection
 :
 :
 target
+-
+text
+"
+"
+:
+:
+search
 -
 text
 "
