--- a/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed.html
+++ b/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-currentcolor-computed.html
@@ -291,6 +291,46 @@ currentcolor
 target
 :
 :
+search
+-
+text
+{
+color
+:
+currentcolor
+;
+background
+-
+color
+:
+currentcolor
+;
+}
+.
+target
+:
+:
+search
+-
+text
+:
+current
+{
+color
+:
+red
+;
+background
+-
+color
+:
+red
+;
+}
+.
+target
+:
+:
 spelling
 -
 error
@@ -413,6 +453,13 @@ selection
 :
 :
 target
+-
+text
+"
+"
+:
+:
+search
 -
 text
 "
