--- a/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-pseudos-inheritance-computed-001.html
+++ b/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-pseudos-inheritance-computed-001.html
@@ -171,6 +171,46 @@ lime
 target
 :
 :
+search
+-
+text
+{
+background
+-
+color
+:
+green
+;
+color
+:
+lime
+;
+}
+.
+target
+:
+:
+search
+-
+text
+:
+current
+{
+background
+-
+color
+:
+red
+;
+color
+:
+red
+;
+}
+.
+target
+:
+:
 spelling
 -
 error
@@ -303,6 +343,13 @@ selection
 :
 :
 target
+-
+text
+"
+"
+:
+:
+search
 -
 text
 "
