--- a/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-pseudos-visited-computed-001.html
+++ b/testing/web-platform/tests/css/css-pseudo/highlight-cascade/highlight-pseudos-visited-computed-001.html
@@ -123,6 +123,32 @@ lime
 a
 :
 :
+search
+-
+text
+{
+color
+:
+lime
+;
+}
+a
+:
+:
+search
+-
+text
+:
+current
+{
+color
+:
+red
+;
+}
+a
+:
+:
 spelling
 -
 error
@@ -181,6 +207,36 @@ text
 color
 :
 yellow
+;
+}
+a
+:
+visited
+:
+:
+search
+-
+text
+{
+color
+:
+yellow
+;
+}
+a
+:
+visited
+:
+:
+search
+-
+text
+:
+current
+{
+color
+:
+red
 ;
 }
 a
@@ -291,6 +347,13 @@ selection
 :
 :
 target
+-
+text
+"
+"
+:
+:
+search
 -
 text
 "
