Bug 1922039 [wpt PR 48410] - WebKit export of https://bugs.webkit.org/show_bug.cgi?id=280648, a=testonly
Automatic update from web-platform-tests
WebKit export of https://bugs.webkit.org/show_bug.cgi?id=280648 (#48410)

--

wpt-commits: 86fb9e800b707863eea53bfd271c11829d70ccdb
wpt-pr: 48410

UltraBlame original commit: 8b223ae094a02ea6dc7933f853de872a07379556

--- a/testing/web-platform/tests/css/css-anchor-position/anchor-parse-invalid.html
+++ b/testing/web-platform/tests/css/css-anchor-position/anchor-parse-invalid.html
@@ -288,6 +288,40 @@ top
 '
 )
 ;
+test_invalid_value
+(
+'
+top
+'
+'
+anchor
+(
+2
+*
+20
+%
+)
+'
+)
+;
+test_invalid_value
+(
+'
+top
+'
+'
+anchor
+(
+(
+2
+*
+20
+%
+)
+)
+'
+)
+;
 /
 /
 Anchor
