Bug 1922122 [wpt PR 48414] - [initial-letter] Fix positioning for raised/sunken initial letters, a=testonly
Automatic update from web-platform-tests
[initial-letter] Fix positioning for raised/sunken initial letters

When the the `initial-letter` property[1] has its `size`
larger than `sink`, the top of the initial letter glyph
overhangs the top of the first line.

Before this patch, the block-direction position of such
initial letters were computed based on the actual size of the
fragment. This patch changes it to the specified `size`,
making it consistent across different font metrics.

Note, the change to the positioning made two tests to hit
existing issues in exclusion space in vertical flow. They are
tracked at crbug.com/370423031.

[1] https://drafts.csswg.org/css-inline-3/#sizing-drop-initials

Bug: 370217727, 370423031
Change-Id: I24b8de13d1a76a27c30850297ca380f98f5021b8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5896658
Commit-Queue: Kent Tamura <tkentchromium.org>
Auto-Submit: Koji Ishii <kojiichromium.org>
Reviewed-by: Kent Tamura <tkentchromium.org>
Cr-Commit-Position: refs/heads/main{#1362700}

--

wpt-commits: a1f4bbf4c6e1a9a861a145a34cd097ea260b5a49
wpt-pr: 48414

UltraBlame original commit: 699b30a6b8b675ec2d508ad2621ccb99d206a41a

--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-vlr-ref.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-vlr-ref.html
@@ -189,7 +189,8 @@ margin
 -
 left
 :
-8px
+-
+4px
 ;
 margin
 -
@@ -223,6 +224,23 @@ top
 :
 -
 20px
+;
+margin
+-
+right
+:
+-
+12px
+;
+}
+.
+remainder2
+{
+margin
+-
+left
+:
+12px
 ;
 }
 <
@@ -270,15 +288,20 @@ remainder
 >
 bc
 <
-/
-div
->
-<
 br
 >
 def
 <
-br
+/
+div
+>
+<
+div
+class
+=
+"
+remainder2
+"
 >
 ghi
 <
@@ -290,7 +313,8 @@ br
 >
 mno
 <
-br
+/
+div
 >
 <
 /
