--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial.html
@@ -4,12 +4,6 @@ DOCTYPE
 html
 >
 <
-html
->
-<
-head
->
-<
 title
 >
 Tests
@@ -138,6 +132,77 @@ initial
 ref
 .
 html
+"
+>
+<
+script
+src
+=
+"
+resources
+/
+initial
+-
+letter
+-
+variants
+.
+js
+"
+>
+<
+/
+script
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+class
+=
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+class
+=
+no
+-
+ascent
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+class
+=
+no
+-
+descent
 "
 >
 <
@@ -272,12 +337,4 @@ br
 <
 /
 div
->
-<
-/
-body
->
-<
-/
-html
 >
