--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-sunk-initial-ref.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-sunk-initial-ref.html
@@ -118,6 +118,26 @@ css
 "
 >
 <
+script
+src
+=
+"
+resources
+/
+initial
+-
+letter
+-
+variants
+.
+js
+"
+>
+<
+/
+script
+>
+<
 style
 >
 .
@@ -167,9 +187,60 @@ float
 :
 left
 ;
+-
+-
+cap
+:
+0
+.
+8
+;
+-
+-
+size
+:
+calc
+(
+(
+24px
+*
+2
++
+20px
+*
+var
+(
+-
+-
+cap
+)
+)
+/
+var
+(
+-
+-
+cap
+)
+)
+;
 height
 :
-80px
+var
+(
+-
+-
+size
+)
+;
+width
+:
+var
+(
+-
+-
+size
+)
 ;
 margin
 -
@@ -177,9 +248,94 @@ top
 :
 2px
 ;
-width
+}
+.
+no
+-
+ascent
+.
+fake
+-
+initial
+-
+letter
+{
+height
 :
-80px
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+(
+1
+-
+var
+(
+-
+-
+cap
+)
+)
+)
+;
+margin
+-
+top
+:
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+var
+(
+-
+-
+cap
+)
++
+2px
+)
+;
+}
+.
+no
+-
+descent
+.
+fake
+-
+initial
+-
+letter
+{
+height
+:
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+var
+(
+-
+-
+cap
+)
+)
 ;
 }
 <
@@ -216,9 +372,6 @@ letter
 <
 /
 div
->
-<
-br
 >
 <
 br
