--- a/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-ref.html
+++ b/testing/web-platform/tests/css/css-inline/initial-letter/initial-letter-raise-initial-ref.html
@@ -4,10 +4,14 @@ DOCTYPE
 html
 >
 <
-html
->
-<
-head
+meta
+charset
+=
+"
+utf
+-
+8
+"
 >
 <
 title
@@ -118,6 +122,26 @@ css
 "
 >
 <
+script
+src
+=
+"
+resources
+/
+initial
+-
+letter
+-
+variants
+.
+js
+"
+>
+<
+/
+script
+>
+<
 style
 >
 .
@@ -167,9 +191,60 @@ float
 :
 left
 ;
+-
+-
+cap
+:
+0
+.
+8
+;
+-
+-
+size
+:
+calc
+(
+(
+24px
+*
+2
++
+20px
+*
+var
+(
+-
+-
+cap
+)
+)
+/
+var
+(
+-
+-
+cap
+)
+)
+;
 height
 :
-80px
+var
+(
+-
+-
+size
+)
+;
+width
+:
+var
+(
+-
+-
+size
+)
 ;
 margin
 -
@@ -177,9 +252,94 @@ top
 :
 2px
 ;
-width
+}
+.
+no
+-
+ascent
+.
+fake
+-
+initial
+-
+letter
+{
+height
 :
-80px
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+(
+1
+-
+var
+(
+-
+-
+cap
+)
+)
+)
+;
+margin
+-
+top
+:
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+var
+(
+-
+-
+cap
+)
++
+2px
+)
+;
+}
+.
+no
+-
+descent
+.
+fake
+-
+initial
+-
+letter
+{
+height
+:
+calc
+(
+var
+(
+-
+-
+size
+)
+*
+var
+(
+-
+-
+cap
+)
+)
 ;
 }
 <
@@ -223,9 +383,6 @@ br
 <
 br
 >
-<
-br
->
 bc
 <
 br
@@ -251,10 +408,13 @@ br
 div
 >
 <
-/
-body
+script
 >
+setupInitialLetterTestVariants
+(
+)
+;
 <
 /
-html
+script
 >
